...
        collectionView.addSubview(refreshControl)
        
        searchArticlesVC = UIStoryboard.viewController(screenName: String(describing: SearchArticlesResultsViewController.self), storyboardName: "SearchArticles") as! SearchArticlesResultsViewController
        searchController = UISearchController(searchResultsController: searchArticlesVC)
        searchController.searchResultsUpdater = searchArticlesVC
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = NSLocalizedString("Search Articles", comment: "")
        searchController.searchBar.delegate = searchArticlesVC
        searchArticlesVC.searchBar = searchController.searchBar
        navigationItem.searchController = searchController
        definesPresentationContext = true
    }
    
...
                }
            })
        }
        viewModel.onError = { [weak self] errorMessage in
            guard let strongSelf = self else { return }
            let alertController = UIAlertController(title: NSLocalizedString("Error", comment: ""), message: errorMessage, preferredStyle: .alert)
            let cancelAction = UIAlertAction(title: NSLocalizedString("Cancel", comment: ""), style: .cancel, handler: nil)
            alertController.addAction(cancelAction)
            strongSelf.present(alertController, animated: true, completion: nil)
        }
        viewModel.refresh()
    }
}
...
